# CircleFund-Bank

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bank.db  bank.py  docker-compose.yml  local.db  main.py  model2.py  owndatabase.py  package-lock.json  package.json  pyproject.toml
app/: main.py
app/api/: routes.py
app/api/auth/: auth_bearer.py
app/api/endpoints/: loans.py
app/api/services/: deposit_service.py  group_service.py  loan_service.py  repayment_service.py  user_service.py  vote_service.py
app/db/: add_groups.py  database.py  init_db.py  models.py
app/models/: schemas.py  user.py
app/templates/: base.html  create_group.html  deposit.html  index.html  join_group.html  loan_request.html  loan_requests.html  login.html  logout.html  repayment_tracker.html  signup.html  statement.html  voting_dashboard.html
frontend/: package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.css  App.jsx  Button.jsx  Deposit.jsx  JoinGroup.jsx  LoanRequest.jsx  Profile.jsx  RepaymentTracker.jsx  Signin.jsx  Signup.jsx  VotingDashboard.jsx
project_details/: Design_Docs.md  database.py
scripts/: smoke_test_api.py
static/: bundle.js  create_group.js  deposit.js  index.html  join_group.js  loan_request.js  loan_requests.js  login.js  navbar.js  repayment_tracker.js  signup.js  statement.js  styles.css  utils.js  voting_dashboard.js
templates/: bankweb.html  trial.html
